# schulze

./: .appveyor.yml  .travis.yml  README.md  gtk2hs.diff  schulze.cabal  stack.yaml  votecount.cabal  win32-bundle.sh  windows-stack.diff
app/: Main.hs
scraper/: Main.hs
src/: Ballot.hs  Condorcet.hs  Lib.hs  Parse.hs  Schulze.hs
src/VoteCount/: Condorcet.hs  Schulze.hs
test/: Spec.hs
votecount/: votecount.cabal
votecount/app/: Main.hs
votecount/src/VoteCount/: Ballot.hs  Format.hs  Parse.hs  Schulze.hs
votecount/test/: Spec.hs
votescrape/: votescrape.cabal
votescrape-gui/: README.md  votescrape-gui.cabal
votescrape-gui/gui/: login_dialog.glade  result_window.glade  root_window.glade
votescrape-gui/src/: Main.hs
votescrape/app/: Main.hs
votescrape/src/: Scrape.hs
