name:                votecount
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/votecount#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VoteCount.Ballot, VoteCount.Condorcet, VoteCount.Schulze, VoteCount.Parse, VoteCount.Format
  build-depends:       base >= 4.7 && < 5, text, containers, parsec, array, case-insensitive, vector
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving, OverloadedStrings

executable votecount-manual
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base, text, parsec, containers, case-insensitive, vector, array
                     , votecount
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite votecount-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, text, containers, parsec
                     , votecount
                     , test-framework, test-framework-hunit, HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/votecount
