name:                votescrape-gui
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/votecount#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable votescrape-gui
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  if os(windows)
    ghc-options:      -optl-mwindows
  build-depends:       base, text, containers, lens, tagsoup, http-client, http-client-tls, http-types, case-insensitive, parsec, vector, gtk3, async, bytestring
                     , file-embed, deepseq
                     , votescrape, votecount
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings TemplateHaskell

source-repository head
  type:     git
  location: https://github.com/githubuser/votecount
