name:                votescrape
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/votecount#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scrape
  build-depends:       base >= 4.7 && < 5, text, containers, case-insensitive, vector, array, lens, split
                     , http-client, http-types, network-uri, tagsoup
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving, OverloadedStrings

executable votescrape
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base, text, containers, lens, tagsoup, http-types
                     , votescrape, votecount
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/votecount
